# ledger-publisher

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
2026-01-17/: checkpoint.json  daily_root.txt  manifest.json  records-000.jsonl
adapters/: __init__.py
adapters/domain_onchain_payments/: __init__.py  export.py
builder/: __init__.py  append_only_guard.py  build.py  generate_proofs.py  manifest.py  merkle.py  normalizers.py
dist_proofs/proofs/2026-01-18/: checkpoint.json  core_spec.json  daily_root.txt  manifest.json  profile.json  proof_index.json
dist_proofs/proofs/2026-01-18/proofs/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/: MERKLE_PROOFS.md
tests/: test_merkle_proofs.py
